# mlir-vitis

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/scripts/: install-build-deps.sh
.github/workflows/: build-and-test.yml  sanity-check.yml
cmake/modules/: AddVitis.cmake  CMakeLists.txt  Findzstd.cmake  VitisConfig.cmake.in
llvm/: CMakeLists.txt
llvm/llvm/include/llvm/IR/: CMakeLists.txt  Intrinsics.td  IntrinsicsFPGA.td  IntrinsicsSPIR.td
llvm/llvm/lib/IR/: Verifier.cpp
llvm/mlir/include/mlir/Dialect/LLVMIR/: LLVMIntrinsicOps.td  LLVMOpBase.td
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/mlir-to-vitis/: autosa-mm2x2.mlir  trivial-v-values-labels.mlir
test/vitis-to-mlir/: autosa-mm2x2.ll
test/vitis-translate/import-llvm/: autosa-mm2x2.ll  sanitized-autosa-mm2x2.ll  trivial-inline-attrs.ll  trivial-loop-options.ll  trivial-operand-bundle.ll
test/vitis-translate/mlir-to-llvmir/: autosa-mm2x2.mlir  trivial-customized-attrs.mlir  trivial-inline-attrs.mlir  trivial-loop-options.mlir  trivial-operand-bundle.mlir
tools/: CMakeLists.txt  setup.py
tools/mlir-to-vitis/: main.py
tools/vitis-to-mlir/: main.py
